improve web app

--- a/app/commons/config.yaml
+++ b/app/commons/config.yaml
@@ -1,17 +1,34 @@
 default:
-  logging_interval: 0.2
+  logging_interval: 0.5
 profiles:
   profile1:
   - rpms
   - speedKmh
   - gear
+  - lastTime
+  - currentTime
+  - session
+  - kersMaxJ
+  - hasERS
+  - windDirection
+  - brake
   profile2:
   - carCoordinates
-  - penalty
   - flag
   - speedKmh
   - gear
   - rpms
-  - maxRpm
-  - maxFuel
-  - suspensionMaxTravel
+  - aidFuelRate
+  test:
+  - rpms
+  - speedKmh
+  - gear
+  - lastTime
+  - currentTime
+  - session
+  - kersMaxJ
+  - isTimedRace
+  - hasExtraLap
+  - finalFF
+  - tyreContactHeading
+  - tyreContactNormal
