feat(telemetry): add project requirements and setup.py

--- a/app/commons/config.yaml
+++ b/app/commons/config.yaml
@@ -1,193 +1,21 @@
 default:
   logging_interval: 0.4
 profiles:
-  asdfadsf: &id001
-  - speedKmh
-  - rpms
-  - gear
-  - fuel
-  - brake
-  - gas
-  - tyreWear
-  - suspensionTravel
-  - steerAngle
-  - pitch
-  - roll
+  racer:
   - position
-  - packetId
-  - status
-  - session
-  - currentTime
-  - lastTime
-  - bestTime
-  - split
-  - completedLaps
   - iCurrentTime
   - iLastTime
   - iBestTime
-  - sessionTimeLeft
-  - distanceTraveled
-  - isInPit
-  - currentSectorIndex
-  - lastSectorTime
-  - numberOfLaps
-  - tyreCompound
-  - replayTimeMultiplier
-  - normalizedCarPosition
-  - carCoordinates
-  - penaltyTime
-  - flag
-  - idealLineOn
-  - isInPitLane
-  - surfaceGrip
-  - mandatoryPitDone
-  - windSpeed
-  - windDirection
-  - velocity
-  - accG
-  - wheelSlip
-  - wheelLoad
-  - wheelsPressure
-  - wheelAngularSpeed
-  - tyreDirtyLevel
-  - tyreCoreTemperature
-  - camberRAD
-  - drs
-  - tc
-  - heading
-  - cgHeight
-  - carDamage
-  - numberOfTyresOut
-  - pitLimiterOn
-  - abs
-  - kersCharge
-  - kersInput
-  - autoShifterOn
-  - rideHeight
-  - turboBoost
-  - ballast
-  - airDensity
+  - completedLaps
+  - currentTime
+  - lastTime
+  - bestTime
+  - fuel
+  - gear
+  - rpms
+  - brake
+  - gas
+  - clutch
   - airTemp
   - roadTemp
-  - localAngularVel
-  - finalFF
-  - performanceMeter
-  - engineBrake
-  - ersRecoveryLevel
-  - ersPowerLevel
-  - ersHeatCharging
-  - ersIsCharging
-  - kersCurrentKJ
-  - drsAvailable
-  - drsEnabled
-  - brakeTemp
-  - clutch
-  - tyreTempI
-  - tyreTempM
-  - tyreTempO
-  - isAIControlled
-  - tyreContactPoint
-  - tyreContactNormal
-  - tyreContactHeading
-  - brakeBias
-  - localVelocity
-  - _smVersion
-  - _acVersion
-  - numberOfSessions
-  - numCars
-  - carModel
-  - track
-  - playerName
-  - playerSurname
-  - playerNick
-  - sectorCount
-  - maxTorque
-  - maxPower
-  - maxRpm
-  - maxFuel
-  - tyreRadius
-  - suspensionMaxTravel
-  - maxTurboBoost
-  - deprecated_1
-  - deprecated_2
-  - penaltiesEnabled
-  - aidFuelRate
-  - aidTireRate
-  - aidMechanicalDamage
-  - aidAllowTyreBlankets
-  - aidStability
-  - aidAutoClutch
-  - aidAutoBlip
-  - hasDRS
-  - hasERS
-  - hasKERS
-  - kersMaxJ
-  - engineBrakeSettingsCount
-  - ersPowerControllerCount
-  - trackSPlineLength
-  - trackConfiguration
-  - ersMaxJ
-  - isTimedRace
-  - hasExtraLap
-  - carSkin
-  - reversedGridPositions
-  - PitWindowStart
-  - PitWindowEnd
-  profile1:
   - speedKmh
-  - rpms
-  - gear
-  - fuel
-  - brake
-  - gas
-  - tyreWear
-  - suspensionTravel
-  - steerAngle
-  - pitch
-  - roll
-  - position
-  profile2:
-  - carCoordinates
-  - flag
-  - speedKmh
-  - gear
-  - rpms
-  - aidFuelRate
-  test:
-  - rpms
-  - speedKmh
-  - gear
-  - lastTime
-  - currentTime
-  - session
-  - kersMaxJ
-  - isTimedRace
-  - hasExtraLap
-  - finalFF
-  - tyreContactHeading
-  - tyreContactNormal
-  test_1_lambo:
-  - speedKmh
-  - rpms
-  - gear
-  - fuel
-  - brake
-  - gas
-  - windDirection
-  - tyreWear
-  - suspensionTravel
-  - status
-  - distanceTraveled
-  test_all: *id001
-  yara:
-  - speedKmh
-  - rpms
-  - gear
-  - fuel
-  - brake
-  - gas
-  - tyreWear
-  - suspensionTravel
-  - steerAngle
-  - pitch
-  - roll
